@@ -2,7 +2,7 @@
 /// \file h5_handler.cc
 /// \brief main program source.
 ///
-/// \author  Muqun Yang (ymuqun@ncsa.uiuc.edu)
+/// \author Muqun Yang (ymuqun@ncsa.uiuc.edu)
 /// \author Hyo-Kyung Lee <hyoklee@hdfgroup.org>
 /// 
 /// Copyright (C) 2007	HDF Group, Inc.
@@ -20,6 +20,7 @@ const static string cgi_version = "3.0";
 /// and meta data parsing.
 extern H5EOS eos;
 
+///////////////////////////////////////////////////////////////////////////////
 /// \fn main(int argc, char *argv[])
 /// main function for HDF5 data handler.
 /// This function processes options and generates the corresponding DAP outputs requested by the user.
@@ -27,6 +28,7 @@ extern H5EOS eos;
 /// @param argv command line arguments for options
 /// @return 0 if success
 /// @return 1 if error
+///////////////////////////////////////////////////////////////////////////////
 int main(int argc, char *argv[])
 {
   DBG(cerr << "Starting the HDF handler." << endl);
@@ -38,8 +40,8 @@ int main(int argc, char *argv[])
 
     // Handle the version info as a special case since there's no need to
     // open the hdf5 file. This makes it possible to move the file open
-    // and close code out of the individual case statements. 02/04/04
-    // jhrg
+    // and close code out of the individual case statements.
+    // jhrg 02/04/04 
     if (df.get_response() == DODSFilter::Version_Response) {
       df.send_version_info();
       return 0;
@@ -61,15 +63,12 @@ int main(int argc, char *argv[])
       DBG(cerr << "eos file is not detected" << endl);
     }
 
-    
-    // More C++ style? How to use virtual function. <hyokyung 2007.02.20. 13:31:10>
     switch (df.get_response()) {
       
     case DODSFilter::DAS_Response:{
       DAS das;
       find_gloattr(file1, das);
-      depth_first(file1, "/", das,
-		  df.get_dataset_name().c_str());
+      depth_first(file1, "/", das);
 
       df.send_das(das);
 
@@ -84,12 +83,6 @@ int main(int argc, char *argv[])
 		
       depth_first(file1, "/", dds,
 		  df.get_dataset_name().c_str());
-#ifdef TRANSFER
-      find_gloattr(file1, das);
-      depth_first(file1, "/", das,
-		  df.get_dataset_name().c_str());      
-      dds.transfer_attributes(&das);
-#endif
       
       DBG(cerr << ">df.send_dds()" << endl);				
       df.send_dds(dds, ce, true);
@@ -111,7 +104,7 @@ int main(int argc, char *argv[])
       break;
     }
 
-    case DODSFilter::DDX_Response:{ // What is DDX? <hyokyung 2007.02.20. 13:32:11>
+    case DODSFilter::DDX_Response:{ 
       HDF5TypeFactory factory;
       DDS dds(&factory);
       ConstraintEvaluator ce;
